--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "marketing",
-  "proxy": "http://localhost:5000",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@devexpress/dx-react-chart": "^3.0.2",
+    "@devexpress/dx-react-chart-material-ui": "^3.0.2",
+    "@devexpress/dx-react-core": "^3.0.2",
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
     "@fortawesome/react-fontawesome": "^0.1.17",
+    "@material-ui/core": "^4.12.3",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
@@ -14,11 +17,17 @@
     "bootstrap": "^5.1.3",
     "bootstrap4": "0.0.1-security",
     "bootstrap5": "^1.1.9",
+    "canvasjs-react-charts": "^1.0.5",
     "carousel": "0.0.3",
     "fontawesome": "^5.6.3",
+    "http-proxy-middleware": "^2.0.4",
+    "i": "^0.3.7",
+    "mdbreact": "^5.2.0",
     "moment": "^2.29.1",
+    "npm": "^8.5.5",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.1",
