--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap5": "^1.1.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.1",
     "react-scripts": "5.0.0",
