--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.8.2",
-    "@emotion/styled": "^11.8.1",
-    "@mui/lab": "^5.0.0-alpha.74",
-    "@mui/material": "^5.5.2",
     "@devexpress/dx-react-chart": "^3.0.2",
     "@devexpress/dx-react-chart-material-ui": "^3.0.2",
     "@devexpress/dx-react-core": "^3.0.2",
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
     "@fortawesome/react-fontawesome": "^0.1.17",
     "@material-ui/core": "^4.12.3",
+    "@mui/lab": "^5.0.0-alpha.74",
+    "@mui/material": "^5.5.2",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
@@ -21,28 +21,30 @@
     "bootstrap": "^5.1.3",
     "bootstrap4": "0.0.1-security",
     "bootstrap5": "^1.1.9",
-    "date-fns": "^2.28.0",
-    "react-fade": "^1.1.1",
-    "react-fade-in": "^2.0.1",
-    "react-hot-toast": "^2.2.0",
-    "dotenv": "^16.0.0",
-    "rc-slider": "^9.7.4",
-    "react-alert": "^7.0.3",
-    "react-alert-template-basic": "^1.0.2",
-    "react-js-pagination": "^3.0.3",
     "canvasjs-react-charts": "^1.0.5",
     "carousel": "0.0.3",
+    "date-fns": "^2.28.0",
+    "dotenv": "^16.0.0",
     "fontawesome": "^5.6.3",
+    "framer": "^2.1.0",
     "http-proxy-middleware": "^2.0.4",
     "i": "^0.3.7",
     "mdbreact": "^5.2.0",
     "moment": "^2.29.1",
     "npm": "^8.5.5",
+    "rc-slider": "^9.7.4",
     "react": "^17.0.2",
+    "react-alert": "^7.0.3",
+    "react-alert-template-basic": "^1.0.2",
     "react-bootstrap": "^2.2.1",
     "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
+    "react-fade": "^1.1.1",
+    "react-fade-in": "^2.0.1",
     "react-google-login": "^5.2.2",
+    "react-hot-toast": "^2.2.0",
+    "react-icons": "^4.3.1",
+    "react-js-pagination": "^3.0.3",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.1",
     "react-scripts": "5.0.0",
