--- a/package.json
+++ b/package.json
@@ -41,6 +41,9 @@
     "react-alert-template-basic": "^1.0.2",
     "react-bootstrap": "^2.2.1",
     "react-chartjs-2": "^4.0.1",
+    "react-countdown": "^2.3.2",
+    "react-countdown-circle-timer": "^3.0.9",
+    "react-countdown-clock": "^2.9.0",
     "react-dom": "^17.0.2",
     "react-fade": "^1.1.1",
     "react-fade-in": "^2.0.1",
