--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "i18n-iso-countries": "^7.4.0",
     "mdbreact": "^5.2.0",
     "moment": "^2.29.1",
+    "moment-duration-format": "^2.3.2",
     "npm": "^8.5.5",
     "rc-slider": "^9.7.4",
     "react": "^17.0.2",
