--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
     "@material-ui/core": "^4.12.3",
     "@mui/lab": "^5.0.0-alpha.74",
     "@mui/material": "^5.5.2",
+    "@tensorflow-models/handpose": "^0.0.7",
+    "@tensorflow-models/qna": "^1.0.1",
+    "@tensorflow/tfjs-node": "^3.15.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "@types/react-redux": "^7.1.22",
+    "@zoomus/websdk": "^2.3.5",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "bootstrap4": "0.0.1-security",
@@ -27,6 +31,7 @@
     "carousel": "0.0.3",
     "date-fns": "^2.28.0",
     "dotenv": "^16.0.0",
+    "fingerpose": "^0.1.0",
     "fontawesome": "^5.6.3",
     "framer": "^2.1.0",
     "http-proxy-middleware": "^2.0.4",
@@ -56,11 +61,13 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.1",
     "react-scripts": "5.0.0",
+    "react-webcam": "^7.0.1",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
     "socket.io-client": "^4.4.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zoommtg": "^0.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
