--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@alan-ai/alan-sdk-web": "^1.8.31",
     "@coreui/coreui": "^4.1.3",
     "@coreui/react": "^4.1.2",
     "@devexpress/dx-react-chart": "^3.0.2",
@@ -15,6 +16,8 @@
     "@material-ui/core": "^4.12.3",
     "@mui/lab": "^5.0.0-alpha.74",
     "@mui/material": "^5.5.2",
+    "@stripe/react-stripe-js": "^1.7.1",
+    "@stripe/stripe-js": "^1.27.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
