--- a/package.json
+++ b/package.json
@@ -22,13 +22,15 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "@types/react-redux": "^7.1.22",
-    "@zoomus/websdk": "^2.3.5",
+    "@zoomus/websdk": "^1.9.0",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "bootstrap4": "0.0.1-security",
     "bootstrap5": "^1.1.9",
+    "buffer": "^6.0.3",
     "canvasjs-react-charts": "^1.0.5",
     "carousel": "0.0.3",
+    "crypto": "^1.0.1",
     "date-fns": "^2.28.0",
     "dotenv": "^16.0.0",
     "fingerpose": "^0.1.0",
@@ -60,14 +62,13 @@
     "react-js-pagination": "^3.0.3",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.1",
-    "react-scripts": "5.0.0",
+    "react-scripts": "4.0.3",
     "react-webcam": "^7.0.1",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
     "socket.io-client": "^4.4.1",
-    "web-vitals": "^2.1.4",
-    "zoommtg": "^0.1.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
