--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "@types/react-redux": "^7.1.22",
+    "@vladmandic/face-api": "^1.6.7",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "bootstrap4": "0.0.1-security",
@@ -27,11 +28,13 @@
     "carousel": "0.0.3",
     "date-fns": "^2.28.0",
     "dotenv": "^16.0.0",
+    "face-api.js": "^0.22.2",
     "fontawesome": "^5.6.3",
     "framer": "^2.1.0",
     "http-proxy-middleware": "^2.0.4",
     "i": "^0.3.7",
     "i18n-iso-countries": "^7.4.0",
+    "jwt-decode": "^3.1.2",
     "mdbreact": "^5.2.0",
     "moment": "^2.29.1",
     "moment-duration-format": "^2.3.2",
@@ -47,6 +50,7 @@
     "react-countdown-clock": "^2.9.0",
     "react-datetime": "^3.1.1",
     "react-dom": "^17.0.2",
+    "react-facebook-login": "^4.1.1",
     "react-fade": "^1.1.1",
     "react-fade-in": "^2.0.1",
     "react-google-login": "^5.2.2",
