--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "@material-ui/core": "^4.12.3",
     "@mui/lab": "^5.0.0-alpha.74",
     "@mui/material": "^5.5.2",
-    "@tensorflow-models/handpose": "^0.0.7",
-    "@tensorflow-models/qna": "^1.0.1",
-    "@tensorflow/tfjs-node": "^3.15.0",
     "@stripe/react-stripe-js": "^1.7.2",
     "@stripe/stripe-js": "^1.27.0",
+    "@tensorflow-models/handpose": "^0.0.7",
+    "@tensorflow-models/qna": "^1.0.1",
+    "@tensorflow/tfjs": "^3.16.0",
+    "@tensorflow/tfjs-node": "^3.15.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
